--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,10 @@
       </div>
      <h1> Just Another Text Editor</h1>
      
-      <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
-          /></div>
+      <div class="navbar-brand">
+        <!-- <img src="./assets/icons/icon_96x96.png"/> PROVIDED AND REMOVED BY ME--> 
+        <span class="btn" style="background-color:none">🧑‍💻</span>
+      </div>
     </nav>
 
     <main id="main">
